MarcoKitTests/TestData/error/color.marco
--before
#ffffgg

--after
5: Color literal expected, got 'g'
